--- a/index.html
+++ b/index.html
@@ -12,15 +12,14 @@
 <body>
     <section class="w-full min-h-screen relative overflow-hidden ">
 
-        <div class="absolute top-0 left-0 w-full h-full object-cover z-0 ">
-            <video autoplay muted loop id="bg-video"
-                class="absolute top-0 left-0 w-full min-h-screen h-full object-cover z-0">
+        <div class="absolute top-0 left-0 w-full h-full object-cover z-0">
+            <video autoplay muted loop id="bg-video" class="absolute top-0 left-0 w-full min-h-screen h-full object-cover z-0"
+                poster="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mP8/wcAAgAB/1h8JAAAAABJRU5ErkJggg==">
                 <source src="build/assets/videos/Smoky.mp4" type="video/mp4" id="weather-bg">
                 Your browser does not support the video tag.
             </video>
             <div class="absolute top-0 left-0 w-full h-full bg-black bg-opacity-50 z-10"></div>
         </div>
-
         <div class="relative z-10  h-full flex flex-col items-center justify-center font-montserrat ">
             <!-- Input Bar -->
             <div class="absolute top-0 left-0 w-full h-screen flex justify-center align-center">
